-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: hs18
-
Component/s: hotspot
-
b91
-
sparc
-
solaris_9
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8014260 | hs25 | Vladimir Kozlov | P4 | Resolved | Fixed | b33 |
The code optimizing autobox idioms should be enabled by default and some of the logic should be moved out from under that flag.
- backported by
-
JDK-8014260 enable parts of EliminateAutoBox by default
-
- Resolved
-
- relates to
-
JDK-8160385 Properly fix 8159244 on jdk7
-
- Resolved
-
-
JDK-8014286 failed java/lang/Math/DivModTests.java after 6934604 changes
-
- Resolved
-
-
JDK-8019247 SIGSEGV in compiled method c8e.e.t_.getArray(Ljava/lang/Class;)[Ljava/lang/Object;
-
- Closed
-
-
JDK-8014959 assert(Compile::current()->live_nodes() < (uint)MaxNodeLimit) failed: Live Node limit exceeded limit
-
- Closed
-
-
JDK-8253101 Clean up CallStaticJavaNode EA flags
-
- Resolved
-
(1 relates to)